# book-study

./: .gitignore  README.md  gittest
books/: 이것이_코딩_테스트다.md
books/7가지 프로젝트로 배우는 LLM AI 에이전트 개발/: README.md
books/7가지 프로젝트로 배우는 LLM AI 에이전트 개발/llm-ai-agent-book/: 4.4 Presentations.ipynb  README.md  ch02-01.ipynb  ch03-01.ipynb  ch03-02.ipynb  ch03-03.ipynb  pyproject.toml
books/Do it! 쉽게 배우는 파이썬 데이터 분석/: README.md  chapter04.ipynb  chapter05.ipynb  chapter06.ipynb  chapter07.ipynb
books/HTML+CSS+JS/: Chapter10.md  Chapter11.md  Chapter12.md  Chapter3.md  Chapter4.md  Chapter5.md  Chapter6.md  Chapter7.md  Chapter8.md  Chapter9.md  README.md  chapter1.md  chapter2.md
books/LLM을 활용한 실전 AI 애플리케이션 개발/: README.md  ch02.ipynb  ch03.ipynb  study-1.md
books/OAuth2_In_Action/: README.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  (+7 more)
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice/: pyproject.toml
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice-260326/: .gitignore  pyproject.toml
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice-260326/Ch01_LangChain_Basics/: ch01_01_llm.ipynb  ch01_02_lcel.ipynb  ch01_03_prompt.ipynb  ch01_04_parser.ipynb  ch01_05_memory.ipynb
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice-260326/Ch02_RAG/: ch02_01_vector_similarity.ipynb  ch02_02_langchain_embedding.ipynb  ch02_03_document_loader.ipynb  ch02_04_text_splitter.ipynb  ch02_05_vector_database.ipynb  ch02_06_rag_chatbot.ipynb
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice-260326/Ch04_Advanced_Rag /: ch04_01_parent_child_chunking.ipynb  ch04_02_multiquery_generation.ipynb  ch04_03_hyde.ipynb  ch04_04_bm25.ipynb  ch04_05_dense_retrieval.ipynb  ch04_06_ensemble_retrieval.ipynb  ch04_07_reranker_llm.ipynb  ch04_08_self_rag.ipynb
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice/ch01_langchain_basics/: ch01_01_llm.ipynb  ch01_02_lcel.ipynb  ch01_03_prompts.ipynb  ch01_04_output_parsers.ipynb  ch01_05_memory.ipynb
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice/ch02_rag/: ch02_01_vector_similarity.ipynb  ch02_02_langchain_embeddings.ipynb  ch02_03_document_loader.ipynb  ch02_04_text_splitter.ipynb  ch02_06_rag_chatbot.py
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice/ch03_multi_modal_rag/: ch03_01_multi_modal_rag.ipynb
books/RAG 마스터 랭체인으로 완성하는 LLM 서비스/rag-master-practice/ch04_advanced_rag/: ch04_01_parent_child_chunking.ipynb
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/: pyproject.toml
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/appendix-A/: code-part1.ipynb
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/ch02/01_main-chapter-code/: ch02.ipynb
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/ch03/01_main-chapter-code/: ch03.ipynb
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/ch04/01_main-chapter-code/: ch04.ipynb  previous_chapter.py
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/ch05/01_main-chapter-code /: ch05.ipynb  data.py  previous_chapter.py
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/ch06/: ch06.ipynb  previous_chapter.py
books/밑바닥부터 만들면서 배우는 LLM/llm-from-scratch/ch07/01_main_chapter_code/: ch07.ipynb  previous_chapter.py
(+759 files in other folders)
