[project]
name = "rag-master-practice-260326"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langsmith>=0.7.22",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]
