[project]
name = "rag-master-practice-260326"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.22",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "unstructured>=0.22.26",
]
