[project]
name = "rag-master-practice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langsmith>=0.4.46",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
]
