[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=3.0.1",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
]
